--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -69,4 +69,14 @@
     <servlet-name>ExtendAOServlet</servlet-name>
     <url-pattern>/ExtendAOServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SubmissionServlet</display-name>
+    <servlet-name>SubmissionServlet</servlet-name>
+    <servlet-class>servlets.SubmissionServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SubmissionServlet</servlet-name>
+    <url-pattern>/SubmissionServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
