Web Service Qui Permet A l'utilisateur de modifier son Offre Financiere

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -79,4 +79,14 @@
     <servlet-name>SubmissionServlet</servlet-name>
     <url-pattern>/SubmissionServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>UpdateFinancialOfferServlet</display-name>
+    <servlet-name>UpdateFinancialOfferServlet</servlet-name>
+    <servlet-class>servlets.UpdateFinancialOfferServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UpdateFinancialOfferServlet</servlet-name>
+    <url-pattern>/UpdateFinancialOfferServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
